Reward And Recognition System 2.0/force-app/main/default/objects/Super_Badge_Configuration__c/Super_Badge_Configuration__c.object-meta.xml
<CustomObject>
    <label>Super Badge Configuration</label>
    <nameField>
        <label>Super Badge Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Super Badge Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>