Reward And Recognition System 2.0/force-app/main/default/objects/Super_Badge_Configuration__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category</label>
    <referenceTo>Category__c</referenceTo>
    <relationshipLabel>Super Badge Configurations</relationshipLabel>
    <relationshipName>Super_Badge_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>