Reward And Recognition System 2.0/force-app/main/default/objects/Super_Badge_Configuration__c/fields/Required_Badge__c.field-meta.xml
<CustomField>
    <fullName>Required_Badge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Required Badge</label>
    <referenceTo>Badge_Configuration__c</referenceTo>
    <relationshipLabel>Super Badge Configurations</relationshipLabel>
    <relationshipName>Super_Badge_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>