Reward And Recognition System 2.0/force-app/main/default/objects/Super_Badge_Configuration__c/fields/Super_Badge_Description__c.field-meta.xml
<CustomField>
    <fullName>Super_Badge_Description__c</fullName>
    <label>Super Badge Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>