Reward And Recognition System 2.0/force-app/main/default/objects/Super_Badge_Configuration__c/fields/Super_Badge_Image__c.field-meta.xml
<CustomField>
    <fullName>Super_Badge_Image__c</fullName>
    <label>Super Badge Image</label>
    <type>Url</type>
</CustomField>