Reward And Recognition System 2.0/force-app/main/default/objects/Super_Badge_Configuration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Super_Badge_Image__c</columns>
    <columns>Required_Badge__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>